# Jaffrez

./: Cargo.toml  LICENSE  README.md
.github/workflows/: grs.yml  profile-summary-cards.yml
minichat-client/: Cargo.toml
minichat-server/: Cargo.toml
profile-summary-card-output/: README.md
profile-summary-card-output/2077/: README.md
profile-summary-card-output/algolia/: README.md
profile-summary-card-output/apprentice/: README.md
profile-summary-card-output/aura/: README.md
profile-summary-card-output/aura_dark/: README.md
profile-summary-card-output/ayu_mirage/: README.md
profile-summary-card-output/bear/: README.md
profile-summary-card-output/blue_green/: README.md
profile-summary-card-output/blueberry/: README.md
profile-summary-card-output/buefy/: README.md
profile-summary-card-output/calm/: README.md
profile-summary-card-output/chartreuse_dark/: README.md
profile-summary-card-output/city_lights/: README.md
profile-summary-card-output/cobalt/: README.md
profile-summary-card-output/cobalt2/: README.md
profile-summary-card-output/codeSTACKr/: README.md
profile-summary-card-output/darcula/: README.md
profile-summary-card-output/dark/: README.md
profile-summary-card-output/date_night/: README.md
profile-summary-card-output/default/: README.md
profile-summary-card-output/discord_old_blurple/: README.md
profile-summary-card-output/dracula/: README.md
profile-summary-card-output/flag_india/: README.md
profile-summary-card-output/github/: README.md
profile-summary-card-output/github_dark/: README.md
(+39 files in other folders)
