[package]
name = "minichat-server"
version = "0.1.0"
edition = "2021"
authors = ["Jaffrez <Jaffrez@outlook.com>"]

[dependencies]
chrono = "0.4.38"
clap = "4.5.7"
color-eyre = "0.6.3"
crossbeam-channel = "0.5.13"
ctrlc = { version = "3.4.4", features = ["termination"] }
parking_lot = "0.12.3"
ratatui = { version = "0.26.3", features = ["all-widgets"] }
redis = "0.25.4"
reqwest = "0.12.5"
rsa = "0.9.6"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha3 = "0.10.8"
tempfile = "3.10.1"
toml = "0.8.14"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = "0.3.18"
